# plainH264

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shared/: file.cpp  file.h  math.cpp  math.h  output.cpp  output.h  time.cpp  time.h
viewer/: CMakeLists.txt  atlas.cpp  atlas.h  decodeimage.cpp  decodeimage.h  encodeimage.cpp  encodeimage.h  viewer.cpp  writetext.cpp  writetext.h
